--- a/Views/Reg/Register.cshtml
+++ b/Views/Reg/Register.cshtml
@@ -35,11 +35,13 @@
     </div>
 </nav>
 
-<h2>Register</h2>
+<br>
+
 @using (Html.BeginForm("Register", "Reg", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-
+<h2>Register</h2>
+<hr>
     <!-- Display validation summary -->
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -56,6 +58,11 @@
         @Html.LabelFor(model => model.Email, new { @class = "control-label" })
         @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+    </div>
+     <div class="form-group">
+        @Html.LabelFor(model => model.IdNumber, new { @class = "control-label" })
+        @Html.TextBoxFor(model => model.IdNumber, new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.IdNumber, "", new { @class = "text-danger" })
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.Password, new { @class = "control-label" })
