--- a/Views/Reg/Login.cshtml
+++ b/Views/Reg/Login.cshtml
@@ -14,6 +14,15 @@
 <!-- Link to the external css file -->
 <link rel="stylesheet" href="~/css/newstyle.css">
 
+<style>
+     body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 20px;
+        }
+</style>
+
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
