--- a/Views/Electricity/Create.cshtml
+++ b/Views/Electricity/Create.cshtml
@@ -80,16 +80,37 @@
 <div class="card">
     <div class="card-body">
         <form asp-action="Create" method="post">
-            <div class="form-group">
+           
      <div class="form-group">
         <label asp-for="Usage" class="control-label"></label>
         <input asp-for="Usage" class="form-control" />
         <span asp-validation-for="Usage" class="text-danger"></span>
     </div>
+   @* <div class="form-group">  
+           <label asp-for="Rate" class="control-label"></label>  
+           <input asp-for="Rate" class="form-control" />  
+           <span asp-validation-for="Rate" class="text-danger"></span>  
+        </div>  
+        <div class="form-group">  
+           <label asp-for="Cost" class="control-label"></label>  
+           <input asp-for="Cost" class="form-control" />  
+           <span asp-validation-for="Cost" class="text-danger"></span>  
+        </div> *@
+    <div class="form-group">  
+           <label asp-for="status" class="control-label"></label>  
+           <select asp-for="status" class="form-control" asp-items="Html.GetEnumSelectList<EStatus>()">Html.GetEnumSelectList<EStatus>()</select>  
+           <span asp-validation-for="status" class="text-danger"></span>  
+        </div> 
 
+     <div class="form-group">
+        <label asp-for="DueDate" class="control-label"></label>
+        <input asp-for="DueDate" type="date" class="form-control" />
+        <span asp-validation-for="DueDate" class="text-danger"></span>
+    </div>
     <div class="form-group">
         <label asp-for="RegUserId" class="control-label"></label>
-        <select asp-for="RegUserId" class ="form-control" asp-items="@ViewBag.RegUserId"></select>
+        <select asp-for="RegUserId" class ="form-control" asp-items="@(new SelectList(ViewBag.Users, "UserId", "IdNumber"))"></select>
+      
         <span asp-validation-for="RegUserId" class="text-danger"></span>
     </div>
 
@@ -110,10 +131,7 @@
         </div>
     </div>
 
-    <footer>
-        <br>
-        <p>&copy; 2024 Municipal Billing System. All rights reserved.</p>
-    </footer>
+    
 
 </body>
 </html>
